[refactor] 1. base 패키지 이관 2. 화면 관련 패키지 이관

--- a/app/src/main/res/layout/fragment_device_info.xml
+++ b/app/src/main/res/layout/fragment_device_info.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="ch.lock.mobile.android.deviceinfo.ui.main.deviceinfo.DeviceInfoViewModel" />
+            type="ch.lock.mobile.android.deviceinfo.ui.screen.main.deviceinfo.DeviceInfoViewModel" />
     </data>
 
     <LinearLayout
