--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,14 @@
 
         <variable
             name="activity"
-            type="ch.lock.mobile.android.deviceinfo.ui.main.MainActivity" />
+            type="ch.lock.mobile.android.deviceinfo.ui.screen.main.MainActivity" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        tools:context=".ui.main.MainActivity">
+        tools:context=".ui.screen.main.MainActivity">
 
         <com.google.android.material.navigation.NavigationView
             android:id="@+id/toolbar"
