--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -6,7 +6,7 @@
 
         <variable
             name="viewModel"
-            type="ch.lock.mobile.android.deviceinfo.ui.setting.SettingViewModel" />
+            type="ch.lock.mobile.android.deviceinfo.ui.screen.setting.SettingViewModel" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
