--- a/app/src/main/res/layout/fragment_sim_info.xml
+++ b/app/src/main/res/layout/fragment_sim_info.xml
@@ -163,7 +163,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="20dp"
                 android:layout_marginEnd="34dp"
-                android:text="@{viewModel.telecom}"
+                android:text="@{viewModel.simNumber}"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 app:layout_constraintBottom_toBottomOf="parent"
