feat: 디바이스의 마지막 부팅 시간 확인하는 기능 추가 - 네비게이션에서 `시스템` 탭 추가

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -34,4 +34,19 @@
         app:popUpToSaveState="true"
         app:restoreState="true" />
 
+    <!-- System Fragment -->
+    <fragment
+        android:id="@+id/systemFragment"
+        android:name="ch.lock.mobile.android.deviceinfo.ui.screen.main.system.SystemFragment"
+        android:label="SystemFragment" />
+
+    <action
+        android:id="@+id/action_global_systemFragment"
+        app:destination="@id/systemFragment"
+        app:launchSingleTop="true"
+        app:popUpTo="@id/simInfoFragment"
+        app:popUpToInclusive="false"
+        app:popUpToSaveState="true"
+        app:restoreState="true" />
+
 </navigation>
