--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -107,6 +107,14 @@
                             app:drawableLeftCompat="@drawable/device_info_icon" />
 
                         <TextView
+                            android:id="@+id/navSystem"
+                            style="@style/NavigationView"
+                            android:drawablePadding="15dp"
+                            android:focusable="true"
+                            android:text="@string/system"
+                            app:drawableLeftCompat="@drawable/ic_build" />
+
+                        <TextView
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:paddingStart="10dp"
