--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,6 +28,7 @@
                     android:paddingStart="0dp"
                     android:paddingEnd="8dp"
                     app:contentInsetStartWithNavigation="0dp"
+                    app:logo="@drawable/device_info_icon"
                     app:navigationIcon="@drawable/side_menu_button" />
 
                 <androidx.fragment.app.FragmentContainerView
@@ -35,6 +36,7 @@
                     android:name="androidx.navigation.fragment.NavHostFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:background="@color/color_eeeeee"
                     app:defaultNavHost="true"
                     app:navGraph="@navigation/navigation_graph" />
 
