--- a/app/src/main/res/layout/fragment_system.xml
+++ b/app/src/main/res/layout/fragment_system.xml
@@ -12,8 +12,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white">
+        android:layout_height="match_parent">
 
         <View
             android:id="@+id/topView"
@@ -68,7 +67,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/iv_power"
                 app:layout_constraintTop_toBottomOf="@id/tv_last_boot_time_title"
-                tools:text="20230710" />
+                tools:text="3일 전" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
