--- a/app/src/main/res/drawable/bt_background.xml
+++ b/app/src/main/res/drawable/bt_background.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/white">
 
-    <solid android:color="@color/white" />
+    <item>
 
-    <stroke
-        android:width="1dp"
-        android:color="@color/color_797d86" />
+        <shape android:shape="rectangle">
 
-</shape>
+            <corners android:radius="18dp" />
+
+            <solid android:color="@color/white" />
+
+        </shape>
+
+    </item>
+
+</ripple>
